k8s/apps/firefly/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firefly
  labels:
    managed-by: argocd
    purpose: household-service
