k8s/apps/firefly/importer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-importer
  namespace: firefly
spec:
  selector:
    app: firefly-importer
  ports:
    - port: 80
      targetPort: http
