k8s/apps/firefly/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly
  namespace: firefly
spec:
  selector:
    app: firefly
  ports:
    - port: 80
      targetPort: http
